WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175103
NetworkRTCProvider::createResolver() leaks CFHost objects
https://bugs.webkit.org/show_bug.cgi?id=175103
Summary
NetworkRTCProvider::createResolver() leaks CFHost objects
Andreas Kling
Reported
2017-08-02 17:42:05 PDT
Looks like we're missing an adoptCF() here eh! <
rdar://problem/33464999
>
Attachments
Patch
(2.22 KB, patch)
2017-08-02 18:21 PDT
,
Andreas Kling
youennf
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(2.23 KB, patch)
2017-08-02 18:36 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2017-08-02 17:43:31 PDT
Actually, let me make a separate radar for this. Importer, take the wheel!
Radar WebKit Bug Importer
Comment 2
2017-08-02 17:43:46 PDT
<
rdar://problem/33690347
>
Andreas Kling
Comment 3
2017-08-02 18:21:22 PDT
Created
attachment 317055
[details]
Patch
WebKit Commit Bot
Comment 4
2017-08-02 18:33:10 PDT
Comment on
attachment 317055
[details]
Patch Rejecting
attachment 317055
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 317055, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/4243265
Andreas Kling
Comment 5
2017-08-02 18:36:18 PDT
Created
attachment 317059
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2017-08-02 20:53:08 PDT
Comment on
attachment 317059
[details]
Patch for landing Clearing flags on attachment: 317059 Committed
r220178
: <
http://trac.webkit.org/changeset/220178
>
WebKit Commit Bot
Comment 7
2017-08-02 20:53:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug